// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PlanPreview /> Match Snapshot 1`] = `
<div
  className="panel-plan-preview"
>
  <h4>
    Plan: 
    test.pln
  </h4>
  <h6>
    Press Ok to continue with this plan, or Cancel to choose another.
  </h6>
  <div
    className="panel-preview-inner"
  >
    <div
      style={
        Object {
          "marginLeft": "5px",
        }
      }
    >
      <ReactList
        axis="y"
        itemRenderer={[Function]}
        itemsRenderer={[Function]}
        length={3}
        minSize={1}
        pageSize={10}
        scrollParentGetter={[Function]}
        scrollParentViewportSizeGetter={[Function]}
        threshold={100}
        type="uniform"
        useStaticSize={false}
        useTranslate3d={false}
      />
    </div>
  </div>
  <div
    className="row btn-row-2"
  >
    <div>
      <button
        className="btn btn-block btn-cancel btn-group-preview"
        id="cancel-load-plan"
        onClick={[Function]}
      >
        Cancel
      </button>
    </div>
    <div>
      <button
        className="btn btn-block btn-green btn-group-preview"
        onClick={[Function]}
      >
        Ok
      </button>
    </div>
  </div>
</div>
`;

exports[`<PlanPreview /> Renders Items 1`] = `
<ReactList
  axis="y"
  itemRenderer={[Function]}
  itemsRenderer={[Function]}
  length={3}
  minSize={1}
  pageSize={10}
  scrollParentGetter={[Function]}
  scrollParentViewportSizeGetter={[Function]}
  threshold={100}
  type="uniform"
  useStaticSize={false}
  useTranslate3d={false}
>
  <div
    style={
      Object {
        "position": "relative",
      }
    }
  >
    <div
      style={
        Object {
          "WebkitTransform": "translate(0px, 0px)",
          "msTransform": "translate(0px, 0px)",
          "transform": "translate(0px, 0px)",
        }
      }
    >
      <div>
        <div
          key="0"
        >
          <div
            className="gf-form-inline"
            key="1"
          >
            <div
              className="panel-plan-text"
              style={
                Object {
                  "fontSize": "17px",
                  "marginTop": "5px",
                }
              }
            >
              1. 
              1: Channel 1
               Duration: 
              30
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</ReactList>
`;
